Added a title to the webpage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fabi's Savvy Coders Portfolioh1</title>
+    <title>Fabi's Savvy Coders Portfolio</title>
 </head>
 <body>
     <h1>Hello World!</h1>
