--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fabi's Savvy Coders Portfolio</title>
 </head>
+<img src="https://media.licdn.com/dms/image/C4E03AQGeXeHQcJNl0w/profile-displayphoto-shrink_200_200/0?e=1546473600&v=beta&t=l1YTiid7CyOnu_54qqqm-U9ZcL_yWSC8fIEw0sJzAZg" alt="Fabiane Clubb"> 
 <body>
-    <h1>Hello World!</h1>
+    <h1>Welcome to my Savvy Coders Portfolio Project!</h1>
     Dead stare with ears cocked kitty scratches couch bad kitty climb a tree, 
     wait for a fireman jump to fireman then scratch his face so hit you unexpectedly. 
     Poop in the plant pot give me some of your food give me some of your food give 
@@ -16,12 +17,10 @@
     Be superior attack like a vicious monster and hide at bottom of staircase to trip human
     yet poop in litter box, scratch the walls need to chase tail taco cat backwards spells 
     taco cat for stare at ceiling.
-   ><ol></ol>
-   <ol></ol>
-   <ol></ol>
-   
-   ><ul></ul>
-   <ul></ul>
-   <ul></ul>
+    
+    Contact information:<br> <a href="melofabi@ymail.com">email</a>
+    <br><a href="https://github.com/clubbfabiane?tab=repositories" target="_blank">GitHub</a>  
+    <br><a href="https://www.linkedin.com/in/fabiane-clubb-38507b30/" target="blank">LinkedIn</a>
+
 </body>
 </html> 
