--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fabi's Savvy Coders Portfolio</title>
+    <title>Fabi Clubb | Web Developer</title>
 </head>
 <img src="https://media.licdn.com/dms/image/C4E03AQGeXeHQcJNl0w/profile-displayphoto-shrink_200_200/0?e=1546473600&v=beta&t=l1YTiid7CyOnu_54qqqm-U9ZcL_yWSC8fIEw0sJzAZg" alt="Fabiane Clubb"> 
 <body>
@@ -16,11 +16,10 @@
     chair right after you get up or my cat stared at me he was sipping his tea, too. 
     Be superior attack like a vicious monster and hide at bottom of staircase to trip human
     yet poop in litter box, scratch the walls need to chase tail taco cat backwards spells 
-    taco cat for stare at ceiling.
+    taco cat for stare at ceiling.adfasg adsgadsg
     
     Contact information:<br> <a href="melofabi@ymail.com">email</a>
     <br><a href="https://github.com/clubbfabiane?tab=repositories" target="_blank">GitHub</a>  
     <br><a href="https://www.linkedin.com/in/fabiane-clubb-38507b30/" target="blank">LinkedIn</a>
-
 </body>
 </html> 
