--- a/index.html
+++ b/index.html
@@ -1,25 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fabi Clubb | Web Developer</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<img src="https://media.licdn.com/dms/image/C4E03AQGeXeHQcJNl0w/profile-displayphoto-shrink_200_200/0?e=1546473600&v=beta&t=l1YTiid7CyOnu_54qqqm-U9ZcL_yWSC8fIEw0sJzAZg" alt="Fabiane Clubb"> 
+
 <body>
-    <h1>Welcome to my Savvy Coders Portfolio Project!</h1>
-    Dead stare with ears cocked kitty scratches couch bad kitty climb a tree, 
-    wait for a fireman jump to fireman then scratch his face so hit you unexpectedly. 
-    Poop in the plant pot give me some of your food give me some of your food give 
-    me some of your food meh, i don't want it what a cat-ass-trophy! for steal the warm 
-    chair right after you get up or my cat stared at me he was sipping his tea, too. 
-    Be superior attack like a vicious monster and hide at bottom of staircase to trip human
-    yet poop in litter box, scratch the walls need to chase tail taco cat backwards spells 
-    taco cat for stare at ceiling.adfasg adsgadsg
+        <div id="navigation">
+                <ul class="container">
+                    <li>
+                        <a href=".blog/">Home</a>
+                        <ul class="dropdown">
+                            <li>First</li>
+                            <li>Second</li>
+                            <li>Third</li>
+                        </ul>
+                     </li>
+                     <li>
+                             <a href=".contact/">Contact</a>
+                          </li>
+                          <li>
+                                 <a href=".projects/">Projects</a>
+                        </li>
+                </ul>
+             </div>
+    <div id="header" class= "container">
+            <img src="https://media.licdn.com/dms/image/C4E03AQGeXeHQcJNl0w/profile-displayphoto-shrink_200_200/0?e=1546473600&v=beta&t=l1YTiid7CyOnu_54qqqm-U9ZcL_yWSC8fIEw0sJzAZg"
+            alt="Fabiane Clubb">
+    </div>
+    <div id="content" class="container">
+            <h1 style="color: hotpink">Welcome to my Savvy Coders Portfolio Project!</h1>
+            Dead stare with ears cocked kitty scratches couch bad kitty climb a tree,
+            wait for a fireman jump to fireman then scratch his face so hit you unexpectedly.
+            Poop in the plant pot give me some of your food give me some of your food give
+            me some of your food meh, i don't want it what a cat-ass-trophy! for steal the warm
+            chair right after you get up or my cat stared at me he was sipping his tea, too.
+            Be superior attack like a vicious monster and hide at bottom of staircase to trip human
+            yet poop in litter box, scratch the walls need to chase tail taco cat backwards spells
+            taco cat for stare at ceiling.<br>
+    </div>
+    <div id="footer" class="container">
+            <p>Contact information:<br> <a href="melofabi@ymail.com">email</a>
+                <br><a href="https://github.com/clubbfabiane?tab=repositories" target="_blank">GitHub</a>
+                <br><a href="https://www.linkedin.com/in/fabiane-clubb-38507b30/" target="blank">LinkedIn</a></p>
+    </div>
     
-    Contact information:<br> <a href="melofabi@ymail.com">email</a>
-    <br><a href="https://github.com/clubbfabiane?tab=repositories" target="_blank">GitHub</a>  
-    <br><a href="https://www.linkedin.com/in/fabiane-clubb-38507b30/" target="blank">LinkedIn</a>
+
+    div#
 </body>
-</html> 
+
+</html>
