--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fabi Clubb | Web Developer</title>
+    <link href=https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -42,15 +45,17 @@
             Be superior attack like a vicious monster and hide at bottom of staircase to trip human
             yet poop in litter box, scratch the walls need to chase tail taco cat backwards spells
             taco cat for stare at ceiling.<br>
+            <p>Dead stare with ears cocked kitty scratches couch bad kitty climb a tree, wait for a fireman jump to fireman then scratch his face so hit you unexpectedly. Poop in the plant pot give me some of your food give me some of your food give me some of your food meh, i don't want it what a cat-ass-trophy! for steal the warm chair right after you get up or my cat stared at me he was sipping his tea, too. Be superior attack like a vicious monster and hide at bottom of staircase to trip human yet poop in litter box, scratch the walls need to chase tail taco cat backwards spells taco cat for stare at ceiling.</p>
     </div>
     <div id="footer" class="container">
-            <p>Contact information:<br> <a href="melofabi@ymail.com">email</a>
-                <br><a href="https://github.com/clubbfabiane?tab=repositories" target="_blank">GitHub</a>
-                <br><a href="https://www.linkedin.com/in/fabiane-clubb-38507b30/" target="blank">LinkedIn</a></p>
+            <p>Contact information:
+                <i class="fas fa-envelope-square"></i> email<a href="melofabi@ymail.com">email</a>
+                <i class="fas fa-envelope-square"></i> 
+                <i class="fab fa-github-square"></i><a href="https://github.com/clubbfabiane?tab=repositories">GitHub</a>
+                <i class="fab fa-linkedin"></i>LinkedIn<a href="https://www.linkedin.com/in/fabiane-clubb-38507b30/">LinkedIn</a></p>
+                
     </div>
     
-
-    div#
 </body>
 
 </html>
